--- a/public/index.html
+++ b/public/index.html
@@ -36,12 +36,13 @@
   <script src="/bootstrap-5.3.1-dist/js/bootstrap.js"></script>
   <script src="/bootstrap-5.3.1-dist/js/bootstrap.min.js"></script>
   <script src="https://kit.fontawesome.com/85f85b2693.js" crossorigin="anonymous"></script>
-  <title>React App</title>
+  
+  <title>TH light store system</title>
 </head>
 
 <body>
   <div id="root"></div>
-  
+  <!-- <script src="/js/sortDates.js"></script> -->
 </body>
 
 </html>
